--- a/arch/arm/configs/ak_bacon_defconfig
+++ b/arch/arm/configs/ak_bacon_defconfig
@@ -241,6 +241,7 @@ CONFIG_IOSCHED_ROW=y
 CONFIG_IOSCHED_CFQ=y
 CONFIG_IOSCHED_FIOPS=y
 CONFIG_IOSCHED_SIO=y
+CONFIG_IOSCHED_SIOPLUS=y
 CONFIG_IOSCHED_BFQ=y
 CONFIG_IOSCHED_ZEN=y
 CONFIG_IOSCHED_VR=y
