--- a/arch/arm/configs/ak_bacon_defconfig
+++ b/arch/arm/configs/ak_bacon_defconfig
@@ -708,6 +708,7 @@ CONFIG_CPU_FREQ_GOV_SMARTMAX=y
 CONFIG_CPU_FREQ_GOV_YANKACTIVE=y
 CONFIG_CPU_FREQ_GOV_IMPULSE=y
 CONFIG_CPU_FREQ_GOV_SLIM=y
+CONFIG_CPU_FREQ_GOV_INTELLIMM=y
 
 #
 # ARM CPU frequency scaling drivers
