ak_bacon_defconfig: enable GOV_ZZMOOVE

--- a/arch/arm/configs/ak_bacon_defconfig
+++ b/arch/arm/configs/ak_bacon_defconfig
@@ -709,6 +709,7 @@ CONFIG_CPU_FREQ_GOV_YANKACTIVE=y
 CONFIG_CPU_FREQ_GOV_IMPULSE=y
 CONFIG_CPU_FREQ_GOV_SLIM=y
 CONFIG_CPU_FREQ_GOV_INTELLIMM=y
+CONFIG_CPU_FREQ_GOV_ZZMOOVE=y
 
 #
 # ARM CPU frequency scaling drivers
