ak_bacon_defconfig: enable FAST_CHARGE

--- a/arch/arm/configs/ak_bacon_defconfig
+++ b/arch/arm/configs/ak_bacon_defconfig
@@ -52,6 +52,7 @@ CONFIG_INTELLI_HOTPLUG=y
 CONFIG_BRICKED_HOTPLUG=y
 CONFIG_ADRENO_IDLER=y
 CONFIG_CPU_VOLTAGE_TABLE=y
+CONFIG_FORCE_FAST_CHARGE=y
 
 #
 # General setup
