--- a/arch/arm/configs/bacon_defconfig
+++ b/arch/arm/configs/bacon_defconfig
@@ -22,10 +22,10 @@ CONFIG_RELAY=y
 CONFIG_BLK_DEV_INITRD=y
 CONFIG_PANIC_TIMEOUT=5
 CONFIG_EMBEDDED=y
-CONFIG_PERF_EVENTS=y
 # CONFIG_VM_EVENT_COUNTERS is not set
 # CONFIG_SLUB_DEBUG is not set
 # CONFIG_COMPAT_BRK is not set
+CONFIG_PROFILING=y
 CONFIG_JUMP_LABEL=y
 CONFIG_PARTITION_ADVANCED=y
 CONFIG_EFI_PARTITION=y
@@ -156,6 +156,7 @@ CONFIG_NETFILTER_XT_TARGET_LOG=y
 CONFIG_NETFILTER_XT_TARGET_MARK=y
 CONFIG_NETFILTER_XT_TARGET_NFQUEUE=y
 CONFIG_NETFILTER_XT_TARGET_NOTRACK=y
+CONFIG_NETFILTER_XT_TARGET_TEE=y
 CONFIG_NETFILTER_XT_TARGET_SECMARK=y
 CONFIG_NETFILTER_XT_TARGET_TCPMSS=y
 CONFIG_NETFILTER_XT_MATCH_COMMENT=y
@@ -261,6 +262,7 @@ CONFIG_UID_STAT=y
 CONFIG_QSEECOM=y
 CONFIG_QPNP_MISC=y
 CONFIG_TI_DRV2667=y
+CONFIG_UID_CPUTIME=y
 CONFIG_SN3193_SLED=y
 CONFIG_SCSI=y
 CONFIG_SCSI_TGT=y
