--- a/arch/arm/configs/bacon_defconfig
+++ b/arch/arm/configs/bacon_defconfig
@@ -324,6 +324,8 @@ CONFIG_INPUT_UINPUT=y
 # CONFIG_DEVMEM is not set
 # CONFIG_DEVKMEM is not set
 CONFIG_SERIAL_MSM_HS=y
+# CONFIG_DIAG_CHAR is not set
+# CONFIG_DIAG_OVER_USB is not set
 CONFIG_HW_RANDOM_MSM=y
 CONFIG_MSM_ADSPRPC=y
 CONFIG_I2C=y
