--- a/arch/arm/boot/dts/project/14001/msm8974-14001-camera.dtsi
+++ b/arch/arm/boot/dts/project/14001/msm8974-14001-camera.dtsi
@@ -40,20 +40,13 @@
 		qcom,cci-master = <0>;
 	};
 
-	actuator1: qcom,actuator@36 {
-		cell-index = <1>;
-		reg = <0x36>;
-		compatible = "qcom,actuator";
-		qcom,cci-master = <0>;
-	};
-
 	qcom,camera@0 {
 		cell-index = <0>;
 		compatible = "qcom,camera";
 		reg = <0x0>;
 		qcom,csiphy-sd-index = <0>;
 		qcom,csid-sd-index = <0>;
-		qcom,mount-angle = <90>;
+		qcom,mount-angle = <270>;
 		qcom,actuator-src = <&actuator0>;
 		qcom,led-flash-src = <&led_flash0>;
 		cam_vdig-supply = <&pm8941_l3>;
@@ -90,11 +83,11 @@
 		qcom,mount-angle = <270>;
 		cam_vana-supply = <&pm8941_l17>;
 		cam_vio-supply = <&pm8941_lvs3>;
-		qcom,cam-vreg-name = "cam_vana", "cam_vio";
-		qcom,cam-vreg-type = <0 1>;
-		qcom,cam-vreg-min-voltage = <2800000 0>;
-		qcom,cam-vreg-max-voltage = <2800000 0>;
-		qcom,cam-vreg-op-mode = <80000 0>;
+		qcom,cam-vreg-name = "vdig", "cam_vio","cam_vana";
+		qcom,cam-vreg-type = <0 1 0>;
+		qcom,cam-vreg-min-voltage = <1000000 0 2800000>;
+		qcom,cam-vreg-max-voltage = <1000000 0 2800000>;
+		qcom,cam-vreg-op-mode = <0 0 80000>;
 		gpios = <&msmgpio 17 0>,
 			<&msmgpio 18 0>,
 			<&msmgpio 89 0>;
@@ -115,7 +108,7 @@
 	};
 };
 
-&master0 {
+&i2c_freq_100Khz {
 	qcom,hw-thigh = <20>;
 	qcom,hw-tlow = <28>;
 	qcom,hw-tsu-sto = <50>;
@@ -129,7 +122,7 @@
 	status = "ok";
 };
 
-&master1 {
+&i2c_freq_400Khz {
 	qcom,hw-thigh = <20>;
 	qcom,hw-tlow = <28>;
 	qcom,hw-tsu-sto = <50>;
