--- a/arch/arm/configs/bacon_defconfig
+++ b/arch/arm/configs/bacon_defconfig
@@ -548,6 +548,7 @@ CONFIG_EXT4_FS=y
 CONFIG_EXT4_FS_SECURITY=y
 CONFIG_F2FS_FS=y
 CONFIG_F2FS_FS_SECURITY=y
+CONFIG_QUOTA=y
 CONFIG_FUSE_FS=y
 CONFIG_VFAT_FS=y
 CONFIG_NTFS_FS=y
