--- a/arch/arm/configs/bacon_defconfig
+++ b/arch/arm/configs/bacon_defconfig
@@ -433,6 +433,7 @@ CONFIG_HID_DRAGONRISE=y
 CONFIG_HID_EMS_FF=y
 CONFIG_HID_ELECOM=y
 CONFIG_HID_EZKEY=y
+CONFIG_HID_FIIO=y
 CONFIG_HID_HOLTEK=y
 CONFIG_HID_KEYTOUCH=y
 CONFIG_HID_KYE=y
