--- a/arch/arm/configs/bacon_defconfig
+++ b/arch/arm/configs/bacon_defconfig
@@ -18,6 +18,7 @@ CONFIG_NAMESPACES=y
 # CONFIG_PID_NS is not set
 CONFIG_RELAY=y
 CONFIG_BLK_DEV_INITRD=y
+CONFIG_CC_OPTIMIZE_FOR_SIZE=y
 CONFIG_PANIC_TIMEOUT=5
 CONFIG_EMBEDDED=y
 # CONFIG_VM_EVENT_COUNTERS is not set
